# Universality

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/adapters/: common.rs  contract.rs  data_edit.rs  experience.rs  mod.rs  registry.rs  runtime.rs
apps/desktop/src-tauri/src/adapters/common/: capabilities.rs  operations.rs  paging.rs  payloads.rs  results.rs  structure.rs
apps/desktop/src-tauri/src/adapters/data_edit/: requests.rs  tests.rs
apps/desktop/src-tauri/src/adapters/datastores/: mod.rs
apps/desktop/src-tauri/src/adapters/experience/: objects.rs
apps/desktop/src-tauri/src/app/: mod.rs  runtime.rs
apps/desktop/src-tauri/src/app/runtime/: datastore_commands.rs  environments.rs  execution.rs  fixtures.rs  library.rs  preferences.rs  profiles.rs  query_tab_tests.rs  query_tabs.rs  saved_work.rs  sql_hint_tests.rs  sql_hints.rs  tabs.rs  ui.rs  workspace.rs  workspace_tests.rs
apps/desktop/src-tauri/src/commands/: app.rs  workspace.rs
apps/desktop/src-tauri/src/core/: mod.rs
apps/desktop/src-tauri/src/domain/: error.rs  health.rs  mod.rs  models.rs
apps/desktop/src-tauri/src/infrastructure/: mod.rs
apps/desktop/src-tauri/src/persistence/: mod.rs
apps/desktop/src-tauri/src/security/: mod.rs
apps/desktop/src-tauri/tests/: adapters_integration.rs
docs/: features.md  release-checklist.md
(+438 files in other folders)
