[package]
name = "datanaut-desktop"
version = "0.1.0"
description = "Datanaut desktop shell"
edition = "2021"

[lib]
name = "datanaut_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
duckdb = { version = "1.10502.0", features = ["bundled"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
mongodb = "3.4"
pbkdf2 = "0.12"
rand = "0.8"
redis = { version = "1.2", features = ["aio", "tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "json", "chrono", "uuid", "bigdecimal"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
